# Velumin

./: .gitignore  AGENTS.md  README.md  REVIEWS.md  STYLE.md
.github/workflows/: README.md  validate.yml
.lrh/templates/request/: review_response.md
project/context/: agents.md  humans.md
project/contributors/: contributors.md
project/design/: design.md
project/design/proposals/: DP-0001-modern-webgpu-rendering.md  DP-0002-cross-platform-renderer-architecture.md  DP-0003-extensible-2d-scene-material-model.md  DP-0004-script-first-validation-workflow.md
project/evidence/: EV-0001.md  EV-0002.md  EV-0003.md  EV-0004.md  EV-0005.md  EV-0006.md  EV-0007.md
project/focus/: current_focus.md
project/goal/: project_goal.md
project/guardrails/: approvals.md  cost.md  optics.md  safety.md
project/memory/: decision_log.md
project/principles/: principles.md
project/roadmap/: roadmap.md
project/status/: current_status.md
project/work_items/: WI-BOOTSTRAP-0001.md  WI-RENDER-0001.md  WI-RENDER-0002.md  WI-RENDER-0003.md  WI-RENDER-0004.md  WI-RENDER-0005.md
project/work_items/resolved/: WI-BOOTSTRAP-0001.md  WI-CI-0001.md  WI-CI-0002.md  WI-RENDER-0001.md  WI-RENDER-0002.md  WI-RENDER-0003.md  WI-RENDER-0004.md  WI-RENDER-0005.md
scripts/: README.md  baseline  demos  develop  format  lint  test  validate  version
webgpu_vector_lib/: Cargo.toml
webgpu_vector_lib/shaders/: composite.wgsl  glow.wgsl  line.wgsl  tester_composite.wgsl
webgpu_vector_lib/src/: lib.rs
webgpu_vector_lib/web/: index.html  package-lock.json  package.json  vite.config.js
(+7 files in other folders)
