[package]
name = "webgpu_vector_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "0.19"   # WebGPU binding for Rust
wasm-bindgen = "0.2"   # Allows Rust to communicate with JavaScript
console_error_panic_hook = "0.1"  # Improves debugging of Rust WASM panics

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Document", "HtmlCanvasElement"]
